# uniprot-mcp-server

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
src/uniprot/tools/: server.py
tests/: it_uniprot_server.py  test_smoke.py  test_uniprot_server.py  test_uniprot_server_it.py
